--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.4.1",
+    "fc": "^1.6.1",
+    "fusioncharts": "^3.17.0",
+    "linechart": "^2.0.0",
+    "ng2-charts": "^2.4.3",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-fc": "^0.41.0",
+    "react-fusioncharts": "^3.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
